--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "name": "@toebean/npc",
   "version": "0.1.0",
-  "description": "RPC over Named Pipes",
+  "description": "Easy RPC over Named Pipes",
   "author": "Tobey Blaber (https://github.com/toebeann)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/toebeann/npc.git"
+  },
+  "bugs": {
+    "url": "https://github.com/toebeann/npc/issues"
+  },
   "funding": [
+    "https://github.com/toebeann/npc?sponsor=1",
     {
       "type": "github",
       "url": "https://github.com/sponsors/toebeann"
@@ -35,6 +43,9 @@
     "rimraf": "^4.1.2",
     "ts-node": "^10.9.1",
     "typed-emitter": "^2.1.0",
+    "typedoc": "^0.23.25",
+    "typedoc-plugin-versions-cli": "^0.1.10",
+    "typedoc-theme-yaf": "^0.0.3",
     "typescript": "^4.9.5"
   },
   "dependencies": {
