--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,12 +3,7 @@ name: npm test
 on:
   push:
     branches: ["main"]
-    paths:
-      [
-        "**.ts",
-        "pnpm-lock.yaml",
-        ".github/workflows/npm-test.yml",
-      ]
+    paths: ["**.ts", "pnpm-lock.yaml", ".github/workflows/npm-test.yml"]
   pull_request:
     branches: ["main", "dev"]
   workflow_dispatch:
