--- a/.github/workflows/pnpm test.yml
+++ b/.github/workflows/pnpm test.yml
@@ -3,7 +3,7 @@ name: pnpm test
 on:
   push:
     branches: ["main"]
-    paths: ["**.ts", "pnpm-lock.yaml", ".github/workflows/test.yml"]
+    paths: ["**.ts", "pnpm-lock.yaml", ".github/workflows/pnpm test.yml"]
   pull_request:
     branches: ["main", "dev"]
   workflow_dispatch:
@@ -11,7 +11,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     strategy:
       matrix:
