--- a/.github/workflows/publish package.yml
+++ b/.github/workflows/publish package.yml
@@ -11,7 +11,7 @@ jobs:
 
   publish:
     needs: test
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
