--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "test": "pnpm format:check",
     "format": "prettier -w .",
     "format:check": "prettier -c .",
-    "build": "rimraf dist && rimraf types && tsc"
+    "build": "rimraf dist && rimraf types && tsc",
+    "build:docs": "typedoc && tpv purge -y --patch 3 && tpv sync -y --symlinks"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.2",
@@ -44,7 +45,7 @@
     "ts-node": "^10.9.1",
     "typed-emitter": "^2.1.0",
     "typedoc": "^0.23.26",
-    "typedoc-plugin-versions-cli": "^0.1.10",
+    "typedoc-plugin-versions-cli": "^0.1.12",
     "typedoc-theme-yaf": "^0.0.4",
     "typescript": "^4.9.5"
   },
