Add kofi to funding links

--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
       "url": "https://github.com/sponsors/toebeann"
     },
     {
-      "type": "individual",
+      "type": "kofi",
+      "url": "https://ko-fi.com/toebean_"
+    },
+    {
+      "type": "paypal",
       "url": "https://paypal.me/tobeyblaber"
     }
   ],
